src/test/deca/context/valid/created/methode_surchage.deca
//Description :
// Redef de methode
//
// Resultats :
// Erreur


class Premiere {
    int x = 2;
    protected float y = 3;

    void blabla(){
    print("blabla premiere");
    }

}

class Second extends Premiere {

  void blabla(){
  print("blabla second");
  }

}
