src/test/deca/context/invalid/created/object_class5.deca
//Description :
//attribut meme nom
//
// Resultats :
// Erreur

class A{
    protected float a = 3;

    int a() {
        print("bjr");
    }
}
